--- a/backend/server/templates/index.html
+++ b/backend/server/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 <div>
     <h1>The lowest gas price near you this week!</h1>
-<img src="{% static 'architecture.jgep' %}" alt="Architecture" style="width: 20%">
+<img src="{% static 'architecture_scratch.jpg' %}" alt="Architecture" style="width: 20%">
 </div>
 </head>
 </body>
